samples/_failures_safe/1761170074_bda13a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fedd198d.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_fedd198d.c:137:12: error: missing terminating " character
  137 |     printf("Log Analysis Results
      |            ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fedd198d.c:137:5: error: expected expression at end of input
  137 |     printf("Log Analysis Results
      |     ^~~~~~
./samples/SAFE/__tmp_fedd198d.c:137:5: error: expected declaration or statement at end of input
